@@ -1,5 +1,6 @@
 package souther.compiler;
 
+import souther.compiler.types.TypeName;
 
 import org.junit.jupiter.api.Test;
 
@@ -46,7 +47,7 @@ class CompileModuleChainTest {
 
         BytesClassLoader loader = new BytesClassLoader(classes, getClass().getClassLoader());
         Object five = Codecs.decoded(loader, "a.N", 5L);
-        Object quad = loader.loadClass("c.Quad" + "$Impl").getConstructor().newInstance();
+        Object quad = Emitted.behavior(loader, "c", "quad").getConstructor().newInstance();
         Object r = Codecs.apply(quad, five);
 
         assertEquals(5L, Codecs.encode(loader, "a.N", r), "inc is identity, so quad round-trips 5 through the chain");
@@ -78,15 +79,15 @@ class CompileModuleChainTest {
         // pa's, so pb emits pb.EmptyCase and permits that.
         Map<String, byte[]> classes = Compiler.compileModules(List.of(PA, PB));
         BytesClassLoader loader = new BytesClassLoader(classes, CompileModuleChainTest.class.getClassLoader());
-        assertEquals(List.of(loader.loadClass("pb.EmptyCase"), loader.loadClass("pb.Receipt")),
-                Arrays.asList(loader.loadClass("pb.CheckoutResult").getPermittedSubclasses()));
+        assertEquals(List.of(loader.loadClass(Emitted.bridgeCase("pb", new TypeName("pa", "Empty"))), loader.loadClass("pb.Receipt")),
+                Arrays.asList(loader.loadClass(Emitted.result("pb", "checkout")).getPermittedSubclasses()));
 
         Object checkout = loader.loadClass("pb.Checkout").getMethod("of").invoke(null);
         assertEquals("pb.Receipt", Codecs.apply(checkout, 300L).getClass().getName(),
                 "the mainline runs to the last stage and answers with this module's own case");
 
         Object departed = Codecs.apply(checkout, 0L);
-        assertEquals("pb.EmptyCase", departed.getClass().getName(),
+        assertEquals(Emitted.bridgeCase("pb", new TypeName("pa", "Empty")), departed.getClass().getName(),
                 "the imported case departs at the first stage and joins the union bridged");
         assertEquals("pa.Empty",
                 departed.getClass().getMethod("value").invoke(departed).getClass().getName());
